# propeterra_internship_2025

./: .gitignore  LICENSE  README.md  pyproject.toml
model_output/: gpt-4.1_Mexico.txt
sample_maps/: map_with_mapbox.html  map_without_mapbox.html
scripts/: dissertation_RAG.py  mapbox_demo.py  openai_query.py  query_model.py  real_estate_professional_search.py  scrape_graph.py  scrape_properstar.py  submit_query.py  submit_real_estate_questions.py  test_rag.py  valid_links_multi_file.py
src/propeterra_internship_2025/data/: all_countries.py  reference_material.py  reference_material.txt
src/propeterra_internship_2025/utils/: api_key_retrieval.py  documentation_templates.py  helpers.py  model_query.py  prompt_templates.py  system_prompts.py  user_prompts.py
